compiladores/fir/fir_parser.output
Terminals unused in grammar

    tPRIVATE
    tPUBLIC


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | declarations

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: vardec ';'
    6            | funcdecl
    7            | funcdef

    8 vardec: types '*' tIDENTIFIER var_aux
    9       | types tIDENTIFIER var_aux
   10       | tEXTERNAL types tIDENTIFIER

   11 vardecs: vardec ';'
   12        | vardecs vardec ';'

   13 vardecs_aux: %empty
   14            | vardecs

   15 var_aux: %empty
   16        | '=' expr

   17 funcdecl: types '*' tIDENTIFIER tCBRACKL args tCBRACKR
   18         | types tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR
   19         | types tIDENTIFIER tCBRACKL args tCBRACKR
   20         | void_type '*' tIDENTIFIER tCBRACKL args tCBRACKR
   21         | void_type tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR
   22         | void_type tIDENTIFIER tCBRACKL args tCBRACKR

   23 funcdef: types '*' tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue
   24        | types tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue
   25        | types tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue
   26        | void_type '*' tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue
   27        | void_type tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue
   28        | void_type tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue

   29 prologue: %empty
   30         | tAT block

   31 epilogue: %empty
   32         | tSHIFT block

   33 block: '{' vardecs_aux instrs_aux '}'

   34 rtval: %empty
   35      | tRTVALUE literal

   36 types: type
   37      | '<' types '>'

   38 type: tTYPE_INT
   39     | tTYPE_STRING
   40     | tTYPE_FLOAT

   41 void_type: tTYPE_VOID

   42 args: %empty
   43     | arg
   44     | args tCOMMA arg

   45 arg: types tIDENTIFIER

   46 instrs: stmt
   47       | instrs stmt

   48 instrs_aux: %empty
   49           | instrs

   50 leave: tLEAVE ';'
   51      | tLEAVE tINTEGER ';'

   52 restart: tRESTART ';'
   53        | tRESTART tINTEGER ';'

   54 stmt: expr ';'
   55     | tWRITE exprs ';'
   56     | tWRITELN exprs ';'
   57     | tWHILE expr tDO block
   58     | tWHILE expr tDO block tFINALLY block
   59     | tIF expr tTHEN stmt
   60     | tIF expr tTHEN stmt tELSE stmt
   61     | leave
   62     | restart
   63     | tRETURN
   64     | block

   65 lval: tIDENTIFIER
   66     | lval tBRACKL expr tBRACKR
   67     | tCBRACKL expr tCBRACKR tBRACKL expr tBRACKR

   68 expr: literal
   69     | string
   70     | lval
   71     | lval '=' expr
   72     | expr '+' expr
   73     | expr '-' expr
   74     | expr '*' expr
   75     | expr '/' expr
   76     | expr '%' expr
   77     | expr '<' expr
   78     | expr tGE expr
   79     | expr tLE expr
   80     | expr tNE expr
   81     | expr tEQ expr
   82     | expr '>' expr
   83     | tLOGNOT expr
   84     | expr tLOGAND expr
   85     | expr tLOGOR expr
   86     | '+' expr
   87     | '-' expr
   88     | tIDENTIFIER tCBRACKL exprs_aux tCBRACKR
   89     | tSIZEOF tCBRACKL expr tCBRACKR
   90     | tAT lval
   91     | tCBRACKL expr tCBRACKR
   92     | tBRACKL expr tBRACKR
   93     | lval '?'

   94 exprs: expr
   95      | exprs tCOMMA expr

   96 exprs_aux: %empty
   97          | exprs

   98 string: tSTRING
   99       | string tSTRING

  100 literal: tINTEGER
  101        | tFLOAT
  102        | tNULLPTR


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 76
    '*' (42) 8 17 20 23 26 74
    '+' (43) 72 86
    '-' (45) 73 87
    '/' (47) 75
    ';' (59) 5 11 12 50 51 52 53 54 55 56
    '<' (60) 37 77
    '=' (61) 16 71
    '>' (62) 37 82
    '?' (63) 93
    '{' (123) 33
    '}' (125) 33
    error (256)
    tWHILE (258) 57 58
    tIF (259) 59 60
    tWRITE (260) 55
    tWRITELN (261) 56
    tAT (262) 30 90
    tSHIFT (263) 32
    tFINALLY (264) 58
    tDO (265) 57 58
    tLEAVE (266) 50 51
    tRESTART (267) 52 53
    tRETURN (268) 63
    tSIZEOF (269) 89
    tLOGAND (270) 84
    tLOGNOT (271) 83
    tLOGOR (272) 85
    tTHEN (273) 59 60
    tEXTERNAL (274) 10 18 21 24 27
    tPRIVATE (275)
    tRTVALUE (276) 35
    tPUBLIC (277)
    tTYPE_INT (278) 38
    tTYPE_STRING (279) 39
    tTYPE_FLOAT (280) 40
    tTYPE_VOID (281) 41
    tINTEGER <i> (282) 51 53 100
    tFLOAT <d> (283) 101
    tIDENTIFIER <s> (284) 8 9 10 17 18 19 20 21 22 23 24 25 26 27 28 45 65 88
    tSTRING <s> (285) 98 99
    tNULLPTR <expression> (286) 102
    tELSE (287) 60
    tCOMMA (288) 44 95
    tCBRACKL (289) 17 18 19 20 21 22 23 24 25 26 27 28 67 88 89 91
    tCBRACKR (290) 17 18 19 20 21 22 23 24 25 26 27 28 67 88 89 91
    tBRACKL (291) 66 67 92
    tBRACKR (292) 66 67 92
    tEQ (293) 81
    tNE (294) 80
    tGE (295) 78
    tLE (296) 79
    tUNARY (297)


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program <sequence> (56)
        on left: 1 2
        on right: 0
    declarations <sequence> (57)
        on left: 3 4
        on right: 2 4
    declaration <node> (58)
        on left: 5 6 7
        on right: 3 4
    vardec <node> (59)
        on left: 8 9 10
        on right: 5 11 12
    vardecs <sequence> (60)
        on left: 11 12
        on right: 12 14
    vardecs_aux <sequence> (61)
        on left: 13 14
        on right: 33
    var_aux <expression> (62)
        on left: 15 16
        on right: 8 9
    funcdecl <node> (63)
        on left: 17 18 19 20 21 22
        on right: 6
    funcdef <node> (64)
        on left: 23 24 25 26 27 28
        on right: 7
    prologue <block> (65)
        on left: 29 30
        on right: 23 24 25 26 27 28
    epilogue <block> (66)
        on left: 31 32
        on right: 23 24 25 26 27 28
    block <block> (67)
        on left: 33
        on right: 23 24 25 26 27 28 30 32 57 58 64
    rtval <expression> (68)
        on left: 34 35
        on right: 23 24 25
    types <type> (69)
        on left: 36 37
        on right: 8 9 10 17 18 19 23 24 25 37 45
    type <type> (70)
        on left: 38 39 40
        on right: 36
    void_type <type> (71)
        on left: 41
        on right: 20 21 22 26 27 28
    args <sequence> (72)
        on left: 42 43 44
        on right: 17 18 19 20 21 22 23 24 25 26 27 28 44
    arg <node> (73)
        on left: 45
        on right: 43 44
    instrs <sequence> (74)
        on left: 46 47
        on right: 47 49
    instrs_aux <sequence> (75)
        on left: 48 49
        on right: 33
    leave <node> (76)
        on left: 50 51
        on right: 61
    restart <node> (77)
        on left: 52 53
        on right: 62
    stmt <node> (78)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 46 47 59 60
    lval <lvalue> (79)
        on left: 65 66 67
        on right: 66 70 71 90 93
    expr <expression> (80)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 16 54 57 58 59 60 66 67 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 89 91 92 94 95
    exprs <sequence> (81)
        on left: 94 95
        on right: 55 56 95 97
    exprs_aux <sequence> (82)
        on left: 96 97
        on right: 88
    string <s> (83)
        on left: 98 99
        on right: 69 99
    literal <expression> (84)
        on left: 100 101 102
        on right: 35 68


State 0

    0 $accept: • program $end

    tEXTERNAL     shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '<'           shift, and go to state 6

    $default  reduce using rule 1 (program)

    program       go to state 7
    declarations  go to state 8
    declaration   go to state 9
    vardec        go to state 10
    funcdecl      go to state 11
    funcdef       go to state 12
    types         go to state 13
    type          go to state 14
    void_type     go to state 15


State 1

   10 vardec: tEXTERNAL • types tIDENTIFIER

    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    '<'           shift, and go to state 6

    types  go to state 16
    type   go to state 14


State 2

   38 type: tTYPE_INT •

    $default  reduce using rule 38 (type)


State 3

   39 type: tTYPE_STRING •

    $default  reduce using rule 39 (type)


State 4

   40 type: tTYPE_FLOAT •

    $default  reduce using rule 40 (type)


State 5

   41 void_type: tTYPE_VOID •

    $default  reduce using rule 41 (void_type)


State 6

   37 types: '<' • types '>'

    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    '<'           shift, and go to state 6

    types  go to state 17
    type   go to state 14


State 7

    0 $accept: program • $end

    $end  shift, and go to state 18


State 8

    2 program: declarations •
    4 declarations: declarations • declaration

    tEXTERNAL     shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '<'           shift, and go to state 6

    $default  reduce using rule 2 (program)

    declaration  go to state 19
    vardec       go to state 10
    funcdecl     go to state 11
    funcdef      go to state 12
    types        go to state 13
    type         go to state 14
    void_type    go to state 15


State 9

    3 declarations: declaration •

    $default  reduce using rule 3 (declarations)


State 10

    5 declaration: vardec • ';'

    ';'  shift, and go to state 20


State 11

    6 declaration: funcdecl •

    $default  reduce using rule 6 (declaration)


State 12

    7 declaration: funcdef •

    $default  reduce using rule 7 (declaration)


State 13

    8 vardec: types • '*' tIDENTIFIER var_aux
    9       | types • tIDENTIFIER var_aux
   17 funcdecl: types • '*' tIDENTIFIER tCBRACKL args tCBRACKR
   18         | types • tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR
   19         | types • tIDENTIFIER tCBRACKL args tCBRACKR
   23 funcdef: types • '*' tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue
   24        | types • tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue
   25        | types • tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue

    tEXTERNAL    shift, and go to state 21
    tIDENTIFIER  shift, and go to state 22
    '*'          shift, and go to state 23


State 14

   36 types: type •

    $default  reduce using rule 36 (types)


State 15

   20 funcdecl: void_type • '*' tIDENTIFIER tCBRACKL args tCBRACKR
   21         | void_type • tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR
   22         | void_type • tIDENTIFIER tCBRACKL args tCBRACKR
   26 funcdef: void_type • '*' tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue
   27        | void_type • tEXTERNAL tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue
   28        | void_type • tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue

    tEXTERNAL    shift, and go to state 24
    tIDENTIFIER  shift, and go to state 25
    '*'          shift, and go to state 26


State 16

   10 vardec: tEXTERNAL types • tIDENTIFIER

    tIDENTIFIER  shift, and go to state 27


State 17

   37 types: '<' types • '>'

    '>'  shift, and go to state 28


State 18

    0 $accept: program $end •

    $default  accept


State 19

    4 declarations: declarations declaration •

    $default  reduce using rule 4 (declarations)


State 20

    5 declaration: vardec ';' •

    $default  reduce using rule 5 (declaration)


State 21

   18 funcdecl: types tEXTERNAL • tIDENTIFIER tCBRACKL args tCBRACKR
   24 funcdef: types tEXTERNAL • tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue

    tIDENTIFIER  shift, and go to state 29


State 22

    9 vardec: types tIDENTIFIER • var_aux
   19 funcdecl: types tIDENTIFIER • tCBRACKL args tCBRACKR
   25 funcdef: types tIDENTIFIER • tCBRACKL args tCBRACKR rtval prologue block epilogue

    tCBRACKL  shift, and go to state 30
    '='       shift, and go to state 31

    $default  reduce using rule 15 (var_aux)

    var_aux  go to state 32


State 23

    8 vardec: types '*' • tIDENTIFIER var_aux
   17 funcdecl: types '*' • tIDENTIFIER tCBRACKL args tCBRACKR
   23 funcdef: types '*' • tIDENTIFIER tCBRACKL args tCBRACKR rtval prologue block epilogue

    tIDENTIFIER  shift, and go to state 33


State 24

   21 funcdecl: void_type tEXTERNAL • tIDENTIFIER tCBRACKL args tCBRACKR
   27 funcdef: void_type tEXTERNAL • tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue

    tIDENTIFIER  shift, and go to state 34


State 25

   22 funcdecl: void_type tIDENTIFIER • tCBRACKL args tCBRACKR
   28 funcdef: void_type tIDENTIFIER • tCBRACKL args tCBRACKR prologue block epilogue

    tCBRACKL  shift, and go to state 35


State 26

   20 funcdecl: void_type '*' • tIDENTIFIER tCBRACKL args tCBRACKR
   26 funcdef: void_type '*' • tIDENTIFIER tCBRACKL args tCBRACKR prologue block epilogue

    tIDENTIFIER  shift, and go to state 36


State 27

   10 vardec: tEXTERNAL types tIDENTIFIER •

    $default  reduce using rule 10 (vardec)


State 28

   37 types: '<' types '>' •

    $default  reduce using rule 37 (types)


State 29

   18 funcdecl: types tEXTERNAL tIDENTIFIER • tCBRACKL args tCBRACKR
   24 funcdef: types tEXTERNAL tIDENTIFIER • tCBRACKL args tCBRACKR rtval prologue block epilogue

    tCBRACKL  shift, and go to state 37


State 30

   19 funcdecl: types tIDENTIFIER tCBRACKL • args tCBRACKR
   25 funcdef: types tIDENTIFIER tCBRACKL • args tCBRACKR rtval prologue block epilogue

    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    '<'           shift, and go to state 6

    $default  reduce using rule 42 (args)

    types  go to state 38
    type   go to state 14
    args   go to state 39
    arg    go to state 40


State 31

   16 var_aux: '=' • expr

    tAT          shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    tLOGNOT      shift, and go to state 43
    tINTEGER     shift, and go to state 44
    tFLOAT       shift, and go to state 45
    tIDENTIFIER  shift, and go to state 46
    tSTRING      shift, and go to state 47
    tNULLPTR     shift, and go to state 48
    tCBRACKL     shift, and go to state 49
    tBRACKL      shift, and go to state 50
    '+'          shift, and go to state 51
    '-'          shift, and go to state 52

    lval     go to state 53
    expr     go to state 54
    string   go to state 55
    literal  go to state 56


State 32

    9 vardec: types tIDENTIFIER var_aux •

    $default  reduce using rule 9 (vardec)


State 33

    8 vardec: types '*' tIDENTIFIER • var_aux
   17 funcdecl: types '*' tIDENTIFIER • tCBRACKL args tCBRACKR
   23 funcdef: types '*' tIDENTIFIER • tCBRACKL args tCBRACKR rtval prologue block epilogue

    tCBRACKL  shift, and go to state 57
    '='       shift, and go to state 31

    $default  reduce using rule 15 (var_aux)

    var_aux  go to state 58


State 34

   21 funcdecl: void_type tEXTERNAL tIDENTIFIER • tCBRACKL args tCBRACKR
   27 funcdef: void_type tEXTERNAL tIDENTIFIER • tCBRACKL args tCBRACKR prologue block epilogue

    tCBRACKL  shift, and go to state 59


State 35

   22 funcdecl: void_type tIDENTIFIER tCBRACKL • args tCBRACKR
   28 funcdef: void_type tIDENTIFIER tCBRACKL • args tCBRACKR prologue block epilogue

    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    '<'           shift, and go to state 6

    $default  reduce using rule 42 (args)

    types  go to state 38
    type   go to state 14
    args   go to state 60
    arg    go to state 40


State 36

   20 funcdecl: void_type '*' tIDENTIFIER • tCBRACKL args tCBRACKR
   26 funcdef: void_type '*' tIDENTIFIER • tCBRACKL args tCBRACKR prologue block epilogue

    tCBRACKL  shift, and go to state 61


State 37

   18 funcdecl: types tEXTERNAL tIDENTIFIER tCBRACKL • args tCBRACKR
   24 funcdef: types tEXTERNAL tIDENTIFIER tCBRACKL • args tCBRACKR rtval prologue block epilogue

    tTYPE_INT     shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_FLOAT   shift, and go to state 4
    '<'           shift, and go to state 6

    $default  reduce using rule 42 (args)

    types  go to state 38
    type   go to state 14
    args   go to state 62
    arg    go to state 40


State 38

   45 arg: types • tIDENTIFIER

    tIDENTIFIER  shift, and go to state 63


State 39

   19 funcdecl: types tIDENTIFIER tCBRACKL args • tCBRACKR
   25 funcdef: types tIDENTIFIER tCBRACKL args • tCBRACKR rtval prologue block epilogue
   44 args: args • tCOMMA arg

    tCOMMA    shift, and go to state 64
    tCBRACKR  shift, and go to state 65


State 40

   43 args: arg •

    $default  reduce using rule 43 (args)


State 41

   90 expr: tAT • lval

    tIDENTIFIER  shift, and go to state 66
    tCBRACKL     shift, and go to state 67

    lval  go to state 68


State 42

   89 expr: tSIZEOF • tCBRACKL expr tCBRACKR

    tCBRACKL  shift, and go to state 69


State 43

   83 expr: tLOGNOT • expr

    tAT          shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    tLOGNOT      shift, and go to state 43
    tINTEGER     shift, and go to state 44
    tFLOAT       shift, and go to state 45
    tIDENTIFIER  shift, and go to state 46
    tSTRING      shift, and go to state 47
    tNULLPTR     shift, and go to state 48
    tCBRACKL     shift, and go to state 49
    tBRACKL      shift, and go to state 50
    '+'          shift, and go to state 51
    '-'          shift, and go to state 52

    lval     go to state 53
    expr     go to state 70
    string   go to state 55
    literal  go to state 56


State 44

  100 literal: tINTEGER •

    $default  reduce using rule 100 (literal)


State 45

  101 literal: tFLOAT •

    $default  reduce using rule 101 (literal)


State 46

   65 lval: tIDENTIFIER •
   88 expr: tIDENTIFIER • tCBRACKL exprs_aux tCBRACKR

    tCBRACKL  shift, and go to state 71

    $default  reduce using rule 65 (lval)


State 47

   98 string: tSTRING •

    $default  reduce using rule 98 (string)


State 48

  102 literal: tNULLPTR •

    $default  reduce using rule 102 (literal)


State 49

   67 lval: tCBRACKL • expr tCBRACKR tBRACKL expr tBRACKR
   91 expr: tCBRACKL • expr tCBRACKR

    tAT          shift, and go to state 41
    tSIZEOF      shift, and go to state 42
    tLOGNOT      shift, and go to state 43
    tINTEGER     shift, and go to state 44
    tFLOAT       shift, and go to state 45
    tIDENTIFIER  shift, and go to state 46
    tSTRING      shift, and go to state 47
    tNULLPTR     shift, and go to state 48
    tCBRACKL     shift, and go to state 49
    tBRACKL      shift, and go to state 50
    '+'          shift, and go to state 51
    '-'          shift, and go to state 52

    lval     go to state 53
    expr     go to state 72
    string   go to state 55
    literal  go to state 56


State 50

   92 expr: tBRACKL • expr tBRACKR
